--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,6 +65,8 @@ jobs:
             --image $ACR_LOGIN_SERVER/${{ env.FRONTEND_IMAGE }}:latest \
             --cpu 1 --memory 1 \
             --registry-login-server $ACR_LOGIN_SERVER \
+            --registry-username ${{ secrets.ACR_USERNAME }} \
+            --registry-password ${{ secrets.ACR_PASSWORD }} \
             --dns-name-label frontend-${{ github.run_number }} \
             --ports 80
 
@@ -76,6 +78,8 @@ jobs:
             --image $ACR_LOGIN_SERVER/${{ env.BACKEND_IMAGE }}:latest \
             --cpu 1 --memory 1 \
             --registry-login-server $ACR_LOGIN_SERVER \
+            --registry-username ${{ secrets.ACR_USERNAME }} \
+            --registry-password ${{ secrets.ACR_PASSWORD }} \
             --dns-name-label backend-${{ github.run_number }} \
             --ports 5000
 
@@ -87,6 +91,8 @@ jobs:
             --image $ACR_LOGIN_SERVER/${{ env.DB_IMAGE }}:latest \
             --cpu 1 --memory 1 \
             --registry-login-server $ACR_LOGIN_SERVER \
+            --registry-username ${{ secrets.ACR_USERNAME }} \
+            --registry-password ${{ secrets.ACR_PASSWORD }} \
             --dns-name-label mysql-${{ github.run_number }} \
             --ports 3306 \
             --environment-variables \
@@ -94,3 +100,4 @@ jobs:
               MYSQL_DATABASE=appdb \
               MYSQL_USER=admin \
               MYSQL_PASSWORD=password
+
